force-app/main/default/objects/Import_Field_Mapping__mdt/Import_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Import Field Mapping</label>
    <pluralLabel>Import Field Mappings</pluralLabel>
</CustomObject>