force-app/main/default/objects/Import_Field_Mapping__mdt/fields/From_JSON_Attribute__c.field-meta.xml
<CustomField>
    <fullName>From_JSON_Attribute__c</fullName>
    <label>From JSON Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>