force-app/main/default/objects/Import_Field_Mapping__mdt/fields/JSON_Import_to_SObject__c.field-meta.xml
<CustomField>
    <fullName>JSON_Import_to_SObject__c</fullName>
    <label>JSON Import to SObject</label>
    <referenceTo>JSON_Import_to_SObject__mdt</referenceTo>
    <relationshipLabel>Import Field Mappings</relationshipLabel>
    <relationshipName>Import_Field_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>