force-app/main/default/objects/Import_Field_Mapping__mdt/fields/To_SObject_Field__c.field-meta.xml
<CustomField>
    <fullName>To_SObject_Field__c</fullName>
    <label>To SObject Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>